Refactor: 채팅방 목록조회 수정